--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   <div class="container" >
      <!--Start Categories Buttons-->
     <div class="row p-2">
-        <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-        <button class="btn" onclick="filterSelection('Technology')"> Technology</button>
-        <button class="btn" onclick="filterSelection('Health')"> Health</button>
-        <button class="btn" onclick="filterSelection('Business')">Business</button>
-        <button class="btn" onclick="filterSelection('colors')"> </button>
+        <button id="all" class="btn active"> Show all</button>
+        <button id="Technology" class="btn"> Technology</button>
+        <button id="Health" class="btn"> Health</button>
+        <button id="Business" class="btn">Business</button>
 
     </div>
     <!--End Categories Buttons-->
