--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                       <li><button id="Health" style="font-size:20px;" class="btn">Health</button></li>
                       <li><button id="Business" style="font-size:20px;" class="btn">Business</button></li>
                       <li><button id="Sport" style="font-size:20px;" class="btn">Sport</button></li>
-                      <li><button id="all" style="font-size:20px;" class="btn">All</button></li>
+                      <li><button id="all" style="font-size:20px;" class="btn active">All</button></li>
                     </ul>
                   </div>
                 </div>
