--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                   <nav class="ml-auto mr-auto" aria-label="...">
                       <ul class="pagination pagination-lg" style="padding:0">
                         <li class="page-item  disabled" value="1">
-                            <button id="one" class=" rounded-circle" >1</button>              </li>
-                        <li class="page-item" value="2"><button id="tow" class="rounded-circle" >2</button></li>
-                        <li class="page-item" value="2"><button id="three" class="rounded-circle" >3</button></li>
+                            <button id="one" class="rounded-circle border " >1</button>              </li>
+                        <li class="page-item ml-1" value="2"><button id="tow" class="rounded-circle border " >2</button></li>
+                        <li class="page-item ml-1" value="2"><button id="three" class="rounded-circle border " >3</button></li>
                       </ul>
                     </nav>
                 </div>
