--- a/contactus.html
+++ b/contactus.html
@@ -62,7 +62,7 @@
                           <a class="nav-link" href="contactus.html">Contact</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html#app">Article</a>
+                            <a class="nav-link" href="article.html">Article</a>
                           </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">Home</a>
